# boilerplate

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: workflow.yml
hooks/: post_gen_project.py
src/: main.py
src/api/: main.py
src/boilerplate/: main.py
src/boilerplate/api/: main.py  something.py
src/boilerplate/common/: main.py
src/reddit_client/: auth.py  client.py  config.py
tests/: test_api.py  test_boilerplate.py
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: workflow.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/: main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/common/: main.py
{{cookiecutter.project_slug}}/tests/: test_api.py  test_{{cookiecutter.project_slug}}.py
