[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyplaylist"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28.2",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.219",
]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 120
fixable = ["I"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 120
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''
