[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "boilerplate"
version = "23.5.24"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.88.0", "uvicorn>=0.20.0", "pandas"]

[project.optional-dependencies]
dev = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.219",
  "watchdog>=2.1.9",
  "httpx>=0.23.2",
]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I", "W"]
line-length = 79
fixable = ["I"]
exclude = [".env", ".venv", "venv", "notebooks"]
show-source = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''
